@@ -4,7 +4,7 @@
 
 /cglib/cglib-nodep = 2.2
 
-com.carrotsearch.randomizedtesting.version = 2.0.12
+com.carrotsearch.randomizedtesting.version = 2.0.13
 /com.carrotsearch.randomizedtesting/junit4-ant = ${com.carrotsearch.randomizedtesting.version}
 /com.carrotsearch.randomizedtesting/randomizedtesting-runner = ${com.carrotsearch.randomizedtesting.version}
 
