@@ -262,6 +262,9 @@ Changes in backwards compatibility policy
 
 Build
 
+* LUCENE-5283: Fail the build if ant test didn't execute any tests 
+  (everything filtered out). (Dawid Weiss)
+
 * LUCENE-5249, LUCENE-5257: All Lucene/Solr modules should use the same
   dependency versions. (Steve Rowe)
   
